rstsr-kml-ffi/header/kblas.h

typedef BLASLONG BLASINT;
typedef int BLASINT;
typedef float _Complex blas_complex_float;
typedef double _Complex blas_complex_double;
typedef struct {
    float real, imag;
} blas_complex_float;
typedef struct {
    double real, imag;
} blas_complex_double;
/* matrix saved in rows or cols */
typedef enum CBLAS_ORDER {
    CblasRowMajor = 101,
    CblasColMajor = 102
} CBLAS_ORDER;
/* matrix transpose or conjugate transpose */
typedef enum CBLAS_TRANSPOSE {
    CblasNoTrans = 111,
    CblasTrans = 112,
    CblasConjTrans = 113, // conjugate transpose
    CblasConjNoTrans = 114
} CBLAS_TRANSPOSE;
typedef CBLAS_ORDER CBLAS_LAYOUT;
float cblas_sdsdot(const BLASINT n, const float alpha, const float *x, const BLASINT incX, const float *y,
    const BLASINT incY);
double cblas_dsdot(const BLASINT n, const float *x, const BLASINT incX, const float *y, const BLASINT incY);
float cblas_sdot(const BLASINT n, const float *x, const BLASINT incX, const float *y, const BLASINT incY);
double cblas_ddot(const BLASINT n, const double *x, const BLASINT incX, const double *y, const BLASINT incY);
blas_complex_float cblas_cdotu(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY);
blas_complex_float cblas_cdotc(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY);
blas_complex_double cblas_zdotu(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY);
blas_complex_double cblas_zdotc(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY);
void cblas_cdotu_sub(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY, void *ret);
void cblas_cdotc_sub(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY, void *ret);
void cblas_zdotu_sub(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY, void *ret);
void cblas_zdotc_sub(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY, void *ret);
float cblas_sasum(const BLASINT n, const float *x, const BLASINT incX);
double cblas_dasum(const BLASINT n, const double *x, const BLASINT incX);
float cblas_scasum(const BLASINT n, const void *x, const BLASINT incX);
double cblas_dzasum(const BLASINT n, const void *x, const BLASINT incX);
float cblas_snrm2(const BLASINT n, const float *x, const BLASINT incX);
double cblas_dnrm2(const BLASINT n, const double *x, const BLASINT incX);
float cblas_scnrm2(const BLASINT n, const void *x, const BLASINT incX);
double cblas_dznrm2(const BLASINT n, const void *x, const BLASINT incX);
CBLAS_INDEX cblas_isamax(const BLASINT n, const float *x, const BLASINT incX);
CBLAS_INDEX cblas_idamax(const BLASINT n, const double *x, const BLASINT incX);
CBLAS_INDEX cblas_icamax(const BLASINT n, const void *x, const BLASINT incX);
CBLAS_INDEX cblas_izamax(const BLASINT n, const void *x, const BLASINT incX);
CBLAS_INDEX cblas_isamin(const BLASINT n, const float *x, const BLASINT incX);
CBLAS_INDEX cblas_idamin(const BLASINT n, const double *x, const BLASINT incX);
CBLAS_INDEX cblas_icamin(const BLASINT n, const void *x, const BLASINT incX);
CBLAS_INDEX cblas_izamin(const BLASINT n, const void *x, const BLASINT incX);
void cblas_saxpy(const BLASINT n, const float alpha, const float *x, const BLASINT incX, float *y, const BLASINT incY);
void cblas_daxpy(const BLASINT n, const double alpha, const double *x, const BLASINT incX, double *y,
    const BLASINT incY);
void cblas_caxpy(const BLASINT n, const void *alpha, const void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_zaxpy(const BLASINT n, const void *alpha, const void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_caxpyc(const BLASINT n, const void *alpha, const void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_zaxpyc(const BLASINT n, const void *alpha, const void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_scopy(const BLASINT n, const float *x, const BLASINT incX, float *y, const BLASINT incY);
void cblas_dcopy(const BLASINT n, const double *x, const BLASINT incX, double *y, const BLASINT incY);
void cblas_ccopy(const BLASINT n, const void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_zcopy(const BLASINT n, const void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_sswap(const BLASINT n, float *x, const BLASINT incX, float *y, const BLASINT incY);
void cblas_dswap(const BLASINT n, double *x, const BLASINT incX, double *y, const BLASINT incY);
void cblas_cswap(const BLASINT n, void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_zswap(const BLASINT n, void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_srotg(float *a, float *b, float *c, float *s);
void cblas_drotg(double *a, double *b, double *c, double *s);
void cblas_srot(const BLASINT N, float *X, const BLASINT incX, float *Y, const BLASINT incY, const float c,
    const float s);
void cblas_drot(const BLASINT N, double *X, const BLASINT incX, double *Y, const BLASINT incY, const double c,
    const double s);
void cblas_csrot(const BLASINT N, float *X, const BLASINT incX, float *Y, const BLASINT incY, const float c,
    const float s);
void cblas_zdrot(const BLASINT N, double *X, const BLASINT incX, double *Y, const BLASINT incY, const double c,
    const double s);
void cblas_srotmg(float *d1, float *d2, float *b1, const float b2, float *P);
void cblas_drotmg(double *d1, double *d2, double *b1, const double b2, double *P);
void cblas_srotm(const BLASINT N, float *X, const BLASINT incX, float *Y, const BLASINT incY, const float *P);
void cblas_drotm(const BLASINT N, double *X, const BLASINT incX, double *Y, const BLASINT incY, const double *P);
void cblas_sscal(const BLASINT N, const float alpha, float *X, const BLASINT incX);
void cblas_dscal(const BLASINT N, const double alpha, double *X, const BLASINT incX);
void cblas_cscal(const BLASINT N, const void *alpha, void *X, const BLASINT incX);
void cblas_zscal(const BLASINT N, const void *alpha, void *X, const BLASINT incX);
void cblas_csscal(const BLASINT N, const float alpha, void *X, const BLASINT incX);
void cblas_zdscal(const BLASINT N, const double alpha, void *X, const BLASINT incX);
void cblas_sgemv(const enum CBLAS_ORDER order, const enum CBLAS_TRANSPOSE trans, const BLASINT m, const BLASINT n,
    const float alpha, const float *a, const BLASINT lda, const float *x, const BLASINT incX, const float beta,
    float *y, const BLASINT incY);
void cblas_dgemv(const enum CBLAS_ORDER order, const enum CBLAS_TRANSPOSE trans, const BLASINT m, const BLASINT n,
    const double alpha, const double *a, const BLASINT lda, const double *x, const BLASINT incX, const double beta,
    double *y, const BLASINT incY);
void cblas_cgemv(const enum CBLAS_ORDER order, const enum CBLAS_TRANSPOSE trans, const BLASINT m, const BLASINT n,
    const void *alpha, const void *a, const BLASINT lda, const void *x, const BLASINT incX, const void *beta, void *y,
    const BLASINT incY);
void cblas_zgemv(const enum CBLAS_ORDER order, const enum CBLAS_TRANSPOSE trans, const BLASINT m, const BLASINT n,
    const void *alpha, const void *a, const BLASINT lda, const void *x, const BLASINT incX, const void *beta, void *y,
    const BLASINT incY);
void cblas_sger(const enum CBLAS_ORDER order, const BLASINT M, const BLASINT N, const float alpha, const float *X,
    const BLASINT incX, const float *Y, const BLASINT incY, float *A, const BLASINT lda);
void cblas_dger(const enum CBLAS_ORDER order, const BLASINT M, const BLASINT N, const double alpha, const double *X,
    const BLASINT incX, const double *Y, const BLASINT incY, double *A, const BLASINT lda);
void cblas_cgeru(const enum CBLAS_ORDER order, const BLASINT M, const BLASINT N, const void *alpha, const void *X,
    const BLASINT incX, const void *Y, const BLASINT incY, void *A, const BLASINT lda);
void cblas_cgerc(const enum CBLAS_ORDER order, const BLASINT M, const BLASINT N, const void *alpha, const void *X,
    const BLASINT incX, const void *Y, const BLASINT incY, void *A, const BLASINT lda);