rstsr-aocl-ffi/header/cblas.h

void BLIS_EXPORT_BLAS cblas_crotg(void *a, void *b, float *c, void *s);
void BLIS_EXPORT_BLAS cblas_zrotg(void *a, void *b, double *c, void *s);