rstsr-openblas-ffi/src/cblas.rs

pub use self::CBLAS_ORDER as CBLAS_LAYOUT;
unsafe extern "C" {
    pub fn openblas_set_num_threads(num_threads: c_int);
    pub fn goto_set_num_threads(num_threads: c_int);
    pub fn openblas_set_num_threads_local(num_threads: c_int) -> c_int;
    pub fn openblas_get_num_threads() -> c_int;
    pub fn openblas_get_num_procs() -> c_int;
    pub fn openblas_get_config() -> *mut c_char;
    pub fn openblas_get_corename() -> *mut c_char;
    pub fn openblas_set_threads_callback_function(callback: openblas_threads_callback);
    pub fn openblas_get_parallel() -> c_int;
    pub fn cblas_sdsdot(
        n: blas_int,
        alpha: f32,
        x: *const f32,
        incx: blas_int,
        y: *const f32,
        incy: blas_int,
    ) -> f32;
    pub fn cblas_dsdot(
        n: blas_int,
        x: *const f32,
        incx: blas_int,
        y: *const f32,
        incy: blas_int,
    ) -> f64;
    pub fn cblas_sdot(
        n: blas_int,
        x: *const f32,
        incx: blas_int,
        y: *const f32,
        incy: blas_int,
    ) -> f32;
    pub fn cblas_ddot(
        n: blas_int,
        x: *const f64,
        incx: blas_int,
        y: *const f64,
        incy: blas_int,
    ) -> f64;
    pub fn cblas_cdotu(
        n: blas_int,
        x: *const c_void,
        incx: blas_int,
        y: *const c_void,
        incy: blas_int,
    ) -> openblas_complex_float;
    pub fn cblas_cdotc(
        n: blas_int,
        x: *const c_void,
        incx: blas_int,
        y: *const c_void,
        incy: blas_int,
    ) -> openblas_complex_float;
    pub fn cblas_zdotu(
        n: blas_int,
        x: *const c_void,
        incx: blas_int,
        y: *const c_void,
        incy: blas_int,
    ) -> openblas_complex_double;
    pub fn cblas_zdotc(
        n: blas_int,
        x: *const c_void,
        incx: blas_int,
        y: *const c_void,
        incy: blas_int,
    ) -> openblas_complex_double;
    pub fn cblas_cdotu_sub(
        n: blas_int,
        x: *const c_void,
        incx: blas_int,
        y: *const c_void,
        incy: blas_int,
        ret: *mut c_void,
    );
    pub fn cblas_cdotc_sub(
        n: blas_int,
        x: *const c_void,
        incx: blas_int,
        y: *const c_void,
        incy: blas_int,
        ret: *mut c_void,
    );
    pub fn cblas_zdotu_sub(
        n: blas_int,
        x: *const c_void,
        incx: blas_int,
        y: *const c_void,
        incy: blas_int,
        ret: *mut c_void,
    );
    pub fn cblas_zdotc_sub(
        n: blas_int,
        x: *const c_void,
        incx: blas_int,
        y: *const c_void,
        incy: blas_int,
        ret: *mut c_void,
    );
    pub fn cblas_sasum(n: blas_int, x: *const f32, incx: blas_int) -> f32;
    pub fn cblas_dasum(n: blas_int, x: *const f64, incx: blas_int) -> f64;
    pub fn cblas_scasum(n: blas_int, x: *const c_void, incx: blas_int) -> f32;
    pub fn cblas_dzasum(n: blas_int, x: *const c_void, incx: blas_int) -> f64;
    pub fn cblas_ssum(n: blas_int, x: *const f32, incx: blas_int) -> f32;
    pub fn cblas_dsum(n: blas_int, x: *const f64, incx: blas_int) -> f64;
    pub fn cblas_scsum(n: blas_int, x: *const c_void, incx: blas_int) -> f32;
    pub fn cblas_dzsum(n: blas_int, x: *const c_void, incx: blas_int) -> f64;
    pub fn cblas_snrm2(N: blas_int, X: *const f32, incX: blas_int) -> f32;
    pub fn cblas_dnrm2(N: blas_int, X: *const f64, incX: blas_int) -> f64;
    pub fn cblas_scnrm2(N: blas_int, X: *const c_void, incX: blas_int) -> f32;
    pub fn cblas_dznrm2(N: blas_int, X: *const c_void, incX: blas_int) -> f64;
    pub fn cblas_isamax(n: blas_int, x: *const f32, incx: blas_int) -> usize;
    pub fn cblas_idamax(n: blas_int, x: *const f64, incx: blas_int) -> usize;
    pub fn cblas_icamax(n: blas_int, x: *const c_void, incx: blas_int) -> usize;
    pub fn cblas_izamax(n: blas_int, x: *const c_void, incx: blas_int) -> usize;
    pub fn cblas_isamin(n: blas_int, x: *const f32, incx: blas_int) -> usize;
    pub fn cblas_idamin(n: blas_int, x: *const f64, incx: blas_int) -> usize;
    pub fn cblas_icamin(n: blas_int, x: *const c_void, incx: blas_int) -> usize;
    pub fn cblas_izamin(n: blas_int, x: *const c_void, incx: blas_int) -> usize;
    pub fn cblas_samax(n: blas_int, x: *const f32, incx: blas_int) -> f32;
    pub fn cblas_damax(n: blas_int, x: *const f64, incx: blas_int) -> f64;
    pub fn cblas_scamax(n: blas_int, x: *const c_void, incx: blas_int) -> f32;
    pub fn cblas_dzamax(n: blas_int, x: *const c_void, incx: blas_int) -> f64;
    pub fn cblas_samin(n: blas_int, x: *const f32, incx: blas_int) -> f32;
    pub fn cblas_damin(n: blas_int, x: *const f64, incx: blas_int) -> f64;
    pub fn cblas_scamin(n: blas_int, x: *const c_void, incx: blas_int) -> f32;
    pub fn cblas_dzamin(n: blas_int, x: *const c_void, incx: blas_int) -> f64;
    pub fn cblas_ismax(n: blas_int, x: *const f32, incx: blas_int) -> usize;
    pub fn cblas_idmax(n: blas_int, x: *const f64, incx: blas_int) -> usize;
    pub fn cblas_icmax(n: blas_int, x: *const c_void, incx: blas_int) -> usize;
    pub fn cblas_izmax(n: blas_int, x: *const c_void, incx: blas_int) -> usize;
    pub fn cblas_ismin(n: blas_int, x: *const f32, incx: blas_int) -> usize;
    pub fn cblas_idmin(n: blas_int, x: *const f64, incx: blas_int) -> usize;
    pub fn cblas_icmin(n: blas_int, x: *const c_void, incx: blas_int) -> usize;
    pub fn cblas_izmin(n: blas_int, x: *const c_void, incx: blas_int) -> usize;
    pub fn cblas_saxpy(
        n: blas_int,
        alpha: f32,
        x: *const f32,
        incx: blas_int,
        y: *mut f32,
        incy: blas_int,
    );
    pub fn cblas_daxpy(
        n: blas_int,
        alpha: f64,
        x: *const f64,
        incx: blas_int,
        y: *mut f64,
        incy: blas_int,
    );
    pub fn cblas_caxpy(
        n: blas_int,
        alpha: *const c_void,
        x: *const c_void,
        incx: blas_int,
        y: *mut c_void,
        incy: blas_int,
    );
    pub fn cblas_zaxpy(
        n: blas_int,
        alpha: *const c_void,
        x: *const c_void,
        incx: blas_int,
        y: *mut c_void,
        incy: blas_int,
    );
    pub fn cblas_caxpyc(
        n: blas_int,
        alpha: *const c_void,
        x: *const c_void,
        incx: blas_int,
        y: *mut c_void,
        incy: blas_int,
    );
    pub fn cblas_zaxpyc(
        n: blas_int,
        alpha: *const c_void,
        x: *const c_void,
        incx: blas_int,
        y: *mut c_void,
        incy: blas_int,
    );
    pub fn cblas_scopy(n: blas_int, x: *const f32, incx: blas_int, y: *mut f32, incy: blas_int);
    pub fn cblas_dcopy(n: blas_int, x: *const f64, incx: blas_int, y: *mut f64, incy: blas_int);
    pub fn cblas_ccopy(
        n: blas_int,
        x: *const c_void,
        incx: blas_int,
        y: *mut c_void,
        incy: blas_int,
    );
    pub fn cblas_zcopy(
        n: blas_int,
        x: *const c_void,
        incx: blas_int,
        y: *mut c_void,
        incy: blas_int,
    );
    pub fn cblas_sswap(n: blas_int, x: *mut f32, incx: blas_int, y: *mut f32, incy: blas_int);
    pub fn cblas_dswap(n: blas_int, x: *mut f64, incx: blas_int, y: *mut f64, incy: blas_int);
    pub fn cblas_cswap(n: blas_int, x: *mut c_void, incx: blas_int, y: *mut c_void, incy: blas_int);
    pub fn cblas_zswap(n: blas_int, x: *mut c_void, incx: blas_int, y: *mut c_void, incy: blas_int);
    pub fn cblas_srot(
        N: blas_int,
        X: *mut f32,
        incX: blas_int,
        Y: *mut f32,
        incY: blas_int,
        c: f32,
        s: f32,
    );
    pub fn cblas_drot(
        N: blas_int,
        X: *mut f64,
        incX: blas_int,
        Y: *mut f64,
        incY: blas_int,
        c: f64,
        s: f64,
    );
    pub fn cblas_csrot(
        n: blas_int,
        x: *const c_void,
        incx: blas_int,
        y: *mut c_void,
        incY: blas_int,
        c: f32,
        s: f32,
    );
    pub fn cblas_zdrot(
        n: blas_int,
        x: *const c_void,
        incx: blas_int,
        y: *mut c_void,
        incY: blas_int,
        c: f64,
        s: f64,
    );
    pub fn cblas_srotg(a: *mut f32, b: *mut f32, c: *mut f32, s: *mut f32);
    pub fn cblas_drotg(a: *mut f64, b: *mut f64, c: *mut f64, s: *mut f64);
    pub fn cblas_crotg(a: *mut c_void, b: *mut c_void, c: *mut f32, s: *mut c_void);
    pub fn cblas_zrotg(a: *mut c_void, b: *mut c_void, c: *mut f64, s: *mut c_void);
    pub fn cblas_srotm(
        N: blas_int,
        X: *mut f32,
        incX: blas_int,
        Y: *mut f32,
        incY: blas_int,
        P: *const f32,
    );
    pub fn cblas_drotm(
        N: blas_int,
        X: *mut f64,
        incX: blas_int,
        Y: *mut f64,
        incY: blas_int,
        P: *const f64,
    );
    pub fn cblas_srotmg(d1: *mut f32, d2: *mut f32, b1: *mut f32, b2: f32, P: *mut f32);
    pub fn cblas_drotmg(d1: *mut f64, d2: *mut f64, b1: *mut f64, b2: f64, P: *mut f64);
    pub fn cblas_sscal(N: blas_int, alpha: f32, X: *mut f32, incX: blas_int);
    pub fn cblas_dscal(N: blas_int, alpha: f64, X: *mut f64, incX: blas_int);
    pub fn cblas_cscal(N: blas_int, alpha: *const c_void, X: *mut c_void, incX: blas_int);
    pub fn cblas_zscal(N: blas_int, alpha: *const c_void, X: *mut c_void, incX: blas_int);
    pub fn cblas_csscal(N: blas_int, alpha: f32, X: *mut c_void, incX: blas_int);
    pub fn cblas_zdscal(N: blas_int, alpha: f64, X: *mut c_void, incX: blas_int);
    pub fn cblas_sgemv(
        order: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f32,
        a: *const f32,
        lda: blas_int,
        x: *const f32,
        incx: blas_int,
        beta: f32,
        y: *mut f32,
        incy: blas_int,
    );
    pub fn cblas_dgemv(
        order: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f64,
        a: *const f64,
        lda: blas_int,
        x: *const f64,
        incx: blas_int,
        beta: f64,
        y: *mut f64,
        incy: blas_int,
    );
    pub fn cblas_cgemv(
        order: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const c_void,
        a: *const c_void,
        lda: blas_int,
        x: *const c_void,
        incx: blas_int,
        beta: *const c_void,
        y: *mut c_void,
        incy: blas_int,
    );
    pub fn cblas_zgemv(
        order: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const c_void,
        a: *const c_void,
        lda: blas_int,
        x: *const c_void,
        incx: blas_int,
        beta: *const c_void,
        y: *mut c_void,
        incy: blas_int,
    );
    pub fn cblas_sger(
        order: CBLAS_ORDER,
        M: blas_int,
        N: blas_int,
        alpha: f32,
        X: *const f32,
        incX: blas_int,
        Y: *const f32,
        incY: blas_int,
        A: *mut f32,
        lda: blas_int,
    );
    pub fn cblas_dger(
        order: CBLAS_ORDER,
        M: blas_int,
        N: blas_int,
        alpha: f64,
        X: *const f64,
        incX: blas_int,
        Y: *const f64,
        incY: blas_int,
        A: *mut f64,
        lda: blas_int,
    );
    pub fn cblas_cgeru(
        order: CBLAS_ORDER,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        X: *const c_void,
        incX: blas_int,
        Y: *const c_void,
        incY: blas_int,
        A: *mut c_void,
        lda: blas_int,
    );
    pub fn cblas_cgerc(
        order: CBLAS_ORDER,
        M: blas_int,
        N: blas_int,
        alpha: *const c_void,
        X: *const c_void,
        incX: blas_int,
        Y: *const c_void,
        incY: blas_int,
        A: *mut c_void,
        lda: blas_int,
    );
